--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,40 @@
 *.jar
 *.war
 *.ear
+#project specific
+src/com/lvl6/properties/DBProperties.java
+src/com/lvl6/properties/APNSProperties.java
+scripts/DBProperties.php
+scripts/referral_code_checks/referral_code_logs
+
+#java specific
+*.class
+
+#eclipse
+.project
+.classpath
+.settings/
+
+target/
+*/target/
+
+#generated files
+bin/
+gen/
+
+*/target/*
+target/
+
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
+#*.p12
+
+## 
+runOnTomcat.sh
+
+
+**/.settings/
