--- a/pictures/pictures-webapp/pom.xml
+++ b/pictures/pictures-webapp/pom.xml
@@ -3,12 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.lvl6</groupId>
-		<artifactId>panda</artifactId>
+		<artifactId>pictures</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>panda-data-model</artifactId>
-	<name>Panda Run Data Model</name>
-	<description>The data model for Panda Run</description>
+	<artifactId>pictures-webapp</artifactId>
+	<packaging>war</packaging>
+	<name>PIctures Webapp</name>
+	<description>Webapp for Pictures with Friends</description>
 
 	<build>
 		<plugins>
@@ -26,8 +27,30 @@
 					<includes>
 						<include>**/test/*.java</include>
 					</includes>
-					<!-- <systemproperties> <property> <name>log4j.configuration</name> 
-						<value>log4j.xml</value> </property> </systemproperties> -->
+<!-- 					<systemproperties>
+						<property>
+							<name>log4j.configuration</name>
+							<value>log4j.xml</value>
+						</property>
+					</systemproperties> -->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<archiveClasses>true</archiveClasses>
+					<webResources>
+						<resource>
+							<directory>${basedir}/src/main/webapp/WEB-INF</directory>
+							<filtering>true</filtering>
+							<targetPath>WEB-INF</targetPath>
+							<includes>
+								<include>**/*.xml</include>
+							</includes>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -45,12 +68,4 @@
 		</testResources>
 	</build>
 
-
-
-	<dependencies>
-		<dependency>
-			<groupId>com.lvl6</groupId>
-			<artifactId>common-data-model</artifactId>
-		</dependency>
-	</dependencies>
 </project>
