--- a/pictures/pictures-data-model/pom.xml
+++ b/pictures/pictures-data-model/pom.xml
@@ -52,5 +52,13 @@
 			<groupId>com.lvl6</groupId>
 			<artifactId>common-data-model</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 	</dependencies>
 </project>
