--- a/common/common-proto-buff/pom.xml
+++ b/common/common-proto-buff/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>common-proto-buff</artifactId>
-	<name>Common Protocol Buffers</name>
+	<name>Game Suite Common Protocol Buffers</name>
 	<description>Proto Buff common classes for GameSuite</description>
 
 
