--- a/common/commons-amqp/pom.xml
+++ b/common/commons-amqp/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>commons-amqp</artifactId>
-	<name>Commons AMQP</name>
+	<name>Game Suite Common AMQP</name>
 	<description>The AMQP library for GameSuite</description>
 
 	<build>
