--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>common</artifactId>
   <packaging>pom</packaging>
-  <name>Game Suite Commons</name>
+  <name>Game Suite Common</name>
   <description>Shared functionality for Game Suite</description>
   <modules>
   	<module>common-data-model</module>
