--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,11 @@
 				<artifactId>protobuf-java</artifactId>
 				<version>2.4.1</version>
 			</dependency>
-			<dependency>
+<!-- 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
 				<version>1.2.16</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
