--- a/pictures/pom.xml
+++ b/pictures/pom.xml
@@ -31,5 +31,6 @@
 		<module>pictures-proto-buff</module>
 		<module>pictures-controllers</module>
 		<module>pictures-webapp</module>
+		<module>pictures-services</module>
 	</modules>
 </project>
