--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.lvl6</groupId>
+				<artifactId>common-services</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lvl6</groupId>
+				<artifactId>common-proto-buff</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>1.0.9</version>
@@ -124,11 +134,8 @@
 				<artifactId>protobuf-java</artifactId>
 				<version>2.4.1</version>
 			</dependency>
-<!-- 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
-			</dependency> -->
+			<!-- <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
+				<version>1.2.16</version> </dependency> -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
@@ -242,12 +249,6 @@
 				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.6.6</version>
-			</dependency>
-
-			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
 				<version>2.1</version>
@@ -270,11 +271,20 @@
 				<artifactId>commons-beanutils</artifactId>
 				<version>1.8.3</version>
 			</dependency>
+			<dependency>
+				<groupId>net.iharder</groupId>
+				<artifactId>base64</artifactId>
+				<version>2.3.8</version>
+			</dependency>
+			<dependency>
+				<groupId>com.hazelcast</groupId>
+				<artifactId>hazelcast</artifactId>
+				<version>2.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<modules>
-
 		<module>common</module>
 		<module>panda</module>
 		<module>pictures</module>
