--- a/common/commons-amqp/pom.xml
+++ b/common/commons-amqp/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>common</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>commons-amqp</artifactId>
+	<artifactId>common-amqp</artifactId>
 	<name>Game Suite Common AMQP</name>
 	<description>The AMQP library for GameSuite</description>
 
@@ -49,6 +49,15 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>common-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>common-proto-buff</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
