--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,5 +14,6 @@
   	<module>commons-amqp</module>
   	<module>common-proto-buff</module>
   	<module>common-services</module>
+  	<module>common-controllers</module>
   </modules>
 </project>
