--- a/common/commons-amqp/pom.xml
+++ b/common/commons-amqp/pom.xml
@@ -57,7 +57,10 @@
 		<dependency>
 			<groupId>com.lvl6</groupId>
 			<artifactId>common-proto-buff</artifactId>
-			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-ip</artifactId>
 		</dependency>
 	</dependencies>
 
