--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,16 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.lvl6</groupId>
+				<artifactId>common-amqp</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lvl6</groupId>
+				<artifactId>common-services</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>1.0.9</version>
@@ -118,6 +128,11 @@
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-jpa</artifactId>
 				<version>1.1.2.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-ip</artifactId>
+				<version>2.2.3.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
