Added maven dependencies

--- a/pictures/pictures-services/pom.xml
+++ b/pictures/pictures-services/pom.xml
@@ -42,4 +42,12 @@
 			</testResource>
 		</testResources>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>pictures-data-model</artifactId>
+		</dependency>
+	</dependencies>
+
 </project>
