--- a/pictures/pictures-controllers/pom.xml
+++ b/pictures/pictures-controllers/pom.xml
@@ -45,5 +45,19 @@
 		</testResources>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>common-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>pictures-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
