--- a/common/common-controllers/pom.xml
+++ b/common/common-controllers/pom.xml
@@ -61,5 +61,9 @@
 			<groupId>com.lvl6</groupId>
 			<artifactId>common-services</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
 	</dependencies>
 </project>
