added dependency in picture-proto-buff pom.xml for common-proto-buff

--- a/pictures/pictures-proto-buff/pom.xml
+++ b/pictures/pictures-proto-buff/pom.xml
@@ -48,6 +48,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>common-proto-buff</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 		</dependency>
