added logging in create account* events comments in basic user proto made loginResponseEvent of type PredatabaseResponseEvent some logging in login request event
renamed some stuff in the protos

--- a/pictures/pictures-controllers/pom.xml
+++ b/pictures/pictures-controllers/pom.xml
@@ -47,6 +47,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.lvl6</groupId>
 			<artifactId>pictures-data-model</artifactId>
 		</dependency>
@@ -65,6 +69,10 @@
 		<dependency>
 			<groupId>com.lvl6</groupId>
 			<artifactId>common-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>common-controllers</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.mail</groupId>
