moved email address checking into another utility class. renamed some properties and methods changed some pom dependencies

--- a/common/common-data-model/pom.xml
+++ b/common/common-data-model/pom.xml
@@ -48,6 +48,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
