RefillTokensByWaitingEvent pom.xml - included dependency for pictures-services project RefillTokensByWaitingEvent.proto - renamed one of the fail statuses CurrencyServiceImpl.java - methods regarding regenerating a token PicturesPoConstants.java - constants for tokens and rubies Currency.java - added toString() TimeUtils.java - class for time related calculations RefillTokensByWaitingRequestEvent.java - request RefillTokensByWaitingResponseEvent.java - response RefillTokensByWaitingController.java - controller

--- a/pictures/pictures-services/pom.xml
+++ b/pictures/pictures-services/pom.xml
@@ -46,6 +46,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.lvl6</groupId>
+			<artifactId>common-controllers</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
 			<artifactId>pictures-data-model</artifactId>
 		</dependency>
 	</dependencies>
