Making changes to get game working

--- a/common/commons-amqp/pom.xml
+++ b/common/commons-amqp/pom.xml
@@ -56,6 +56,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.lvl6</groupId>
+			<artifactId>common-controllers</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.lvl6</groupId>
 			<artifactId>common-proto-buff</artifactId>
 		</dependency>
 		<dependency>
