--- a/common/common-controllers/pom.xml
+++ b/common/common-controllers/pom.xml
@@ -57,5 +57,9 @@
 			<groupId>com.lvl6</groupId>
 			<artifactId>common-services</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-ip</artifactId>
+		</dependency>
 	</dependencies>
 </project>
