--- a/common/common-data-model/pom.xml
+++ b/common/common-data-model/pom.xml
@@ -97,7 +97,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast</artifactId>
+			<artifactId>hazelcast-all</artifactId>
 		</dependency>
 	</dependencies>
 </project>
