--- a/pictures/pictures-webapp/pom.xml
+++ b/pictures/pictures-webapp/pom.xml
@@ -27,12 +27,8 @@
 					<includes>
 						<include>**/test/*.java</include>
 					</includes>
-<!-- 					<systemproperties>
-						<property>
-							<name>log4j.configuration</name>
-							<value>log4j.xml</value>
-						</property>
-					</systemproperties> -->
+					<!-- <systemproperties> <property> <name>log4j.configuration</name> 
+						<value>log4j.xml</value> </property> </systemproperties> -->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -68,4 +64,18 @@
 		</testResources>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.lvl6</groupId>
+			<artifactId>pictures-controllers</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+	</dependencies>
 </project>
