--- a/common/common-services/pom.xml
+++ b/common/common-services/pom.xml
@@ -44,6 +44,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.notnoop.apns</groupId>
+			<artifactId>apns</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
