--- a/pictures/pictures-webapp/pom.xml
+++ b/pictures/pictures-webapp/pom.xml
@@ -77,5 +77,9 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
 	</dependencies>
 </project>
