--- a/pictures/pictures-webapp/pom.xml
+++ b/pictures/pictures-webapp/pom.xml
@@ -81,5 +81,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-http</artifactId>
+		</dependency>
 	</dependencies>
 </project>
