--- a/pictures/pictures-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pictures/pictures-webapp/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 
 	<!-- Spring Security -->
-	<filter>
+<!-- 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -36,7 +36,7 @@
 		<filter-name>Lvl6Admin</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+ -->
 
 
 
