--- a/pictures/pictures-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pictures/pictures-webapp/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 
 	<!-- Spring Security -->
-<!-- 	<filter>
+ 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -21,11 +21,11 @@
 
 
 	<filter>
-		<filter-name>Lvl6Admin</filter-name>
+		<filter-name>PicturesAdmin</filter-name>
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
-			<param-value>com.lvl6.ui.admin.Lvl6Admin</param-value>
+			<param-value>com.lvl6.pictures.ui.admin.PicturesAdmin</param-value>
 		</init-param>
 		<init-param>
 			<param-name>configuration</param-name>
@@ -33,10 +33,10 @@
 		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>Lvl6Admin</filter-name>
+		<filter-name>PicturesAdmin</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
- -->
+ 
 
 
 
