--- a/pom.xml
+++ b/pom.xml
@@ -354,13 +354,18 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket</artifactId>
+				<version>6.8.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-core</artifactId>
-				<version>1.5.7</version>
+				<version>6.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-datetime</artifactId>
-				<version>1.5.7</version>
+				<version>6.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
