--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,16 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.apache.pivot</groupId>
+				<artifactId>pivot</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.pivot</groupId>
+				<artifactId>pivot-charts</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-web</artifactId>
 				<version>${spring.security.version}</version>
