--- a/pom.xml
+++ b/pom.xml
@@ -140,8 +140,18 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-library</artifactId>
+				<version>2.9.3</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.pivot</groupId>
-				<artifactId>pivot</artifactId>
+				<artifactId>pivot-wtk</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.pivot</groupId>
+				<artifactId>pivot-wtk-terra</artifactId>
 				<version>2.0.2</version>
 			</dependency>
 			<dependency>
