--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
 
 		<lvl6.server.log.appender>R</lvl6.server.log.appender>
 		<lvl6.server.log.location>/var/log/tomcat7/pictures</lvl6.server.log.location>
+		
+		<hibernate.hdb2ddl.auto>create</hibernate.hdb2ddl.auto>
 
 
 		<globals.isSandbox>true</globals.isSandbox>
